// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resolver: buildings successfully filters buildings by location 1`] = `
Object {
  "data": Object {
    "buildings": Array [
      Object {
        "location_classificator": "latvia-riga-centrs",
      },
      Object {
        "location_classificator": "latvia-riga-centrs",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: buildings successfully retrieves ALL buildings with sufficient permissions 1`] = `
Object {
  "data": Object {
    "buildings": Array [
      Object {
        "location_classificator": "latvia-riga-centrs",
      },
      Object {
        "location_classificator": "latvia-riga-centrs",
      },
      Object {
        "location_classificator": "latvia-riga-agenskalns",
      },
      Object {
        "location_classificator": "latvia-riga",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: buildings successfully retrieves multiple buildings 1`] = `
Object {
  "data": Object {
    "buildings": Array [
      Object {
        "id": 1,
      },
      Object {
        "id": 2,
      },
      Object {
        "id": 3,
      },
      Object {
        "id": 4,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: buildings throws a validation exception if limit too large provided 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "BAD_USER_INPUT",
        "details": Array [
          Object {
            "context": Object {
              "key": "limit",
              "label": "limit",
              "limit": 100,
              "value": 10000,
            },
            "message": "\\"limit\\" must be less than or equal to 100",
            "path": Array [
              "limit",
            ],
            "type": "number.max",
          },
        ],
      },
      "message": "Input validation failed",
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: buildings throws a validation exception if no limit provided 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You do not have sufficient permissions to query for unlimited results. Please provide a limit.",
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
